--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "^43.0.0",
+    "lottie-react-native": "^4.1.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.66.1",
